--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ python:
   - "3.4"
   - "nightly"
 
-install: "pip install -r requirements.txt"
+install:
+  - "pip install -r requirements.txt"
 
 before_script:
   - "paver setup"
