--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==1.8
-Paver==1.2.4
-flake8==2.4.0
-tmdbsimple==1.3.0
+Django>=1.8,<1.9
+Paver>=1.2  # First version with Python 3 support
+flake8>=2.2.0  # Crashes on Python3.4 sometimes in prior releases
+tmdbsimple
