--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django>=1.8,<1.9  # Django 1.8
 Paver>=1.2  # First version with Python 3 support
 flake8>=1.2  # First version with Python 3 support
+isort  # No changelog as far as I am aware, so just allow any version
 tmdbsimple  # No version so we always keep up to date with TMDb API changes
