--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: python
 
 python:
+- '2.6'
+- '2.7'
 - '3.2'
 - '3.3'
 - '3.4'
-- nightly
+- 'nightly'
+- 'pypy'
 
 install:
 - pip install -r requirements.txt
@@ -16,7 +19,8 @@ script:
 
 matrix:
   allow_failures:
-  - python: nightly
+  - python:
+    - 'nightly'
 
 env:
   global:
