Django versions in travis build file

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ python:
 - 'nightly'
 
 install:
-- pip install -r requirements.txt
-- pip install Paver flake8
+- pip install ${DJANGO} Paver flake8 tmdbsimple
 
 script:
 - paver inspect
@@ -20,7 +19,22 @@ script:
 matrix:
   allow_failures:
   - python: 'nightly'
+  exclude:
+    - python: '2.6'
+      env: DJANGO="Django>=1.7,<1.8"
+    - python: '2.6'
+      env: DJANGO="Django>=1.8,<1.9"
+    - python: '3.2'
+      env: DJANGO="Django>=1.4,<1.5"
+    - python: '3.3'
+      env: DJANGO="Django>=1.4,<1.5"
+    - python: '3.4'
+      env: DJANGO="Django>=1.4,<1.5"
 
 env:
   global:
     secure: uI+0MUSsCbTAWlyODiAURJObLDZ1mnLlYQGhDFUW4FGFTIKjbX9aZiNv0J9P0qbQDsO8OrFRuAaa2L2z/09w54g39gsQUW2vBPL/W+6p+twMZl4NHT9vAYrfXRqylCG/gcswOKs2hTlHC3qbp3vBpoCm1nI0rlonyWJZnbEU+ZQ=
+  matrix:
+    - DJANGO="Django>=1.4,<1.5
+    - DJANGO="Django>=1.7,<1.8"
+    - DJANGO="Django>=1.8,<1.9"
